# openrlm

./: .gitignore  LICENSE  README.md  pyproject.toml  sandbox-deps.txt
docs/: anthropic-oauth-plan.md  engine-extraction-plan.md
src/arcgeneral/: __init__.py  __main__.py  agent.py  cli.py  codex.py  config.py  events.py  host_functions.py  internet_extract.py  internet_search.py  llm.py  runtime_factory.py  sandbox.py  tool.py
src/arcgeneral/contrib/: internet_extract.py  internet_search.py
src/arcgeneral/ipybox/: __init__.py  build.py  executor.py  kernel.py
src/arcgeneral/ipybox/docker/: pyproject.toml
src/openrlm/: __init__.py  __main__.py  agent.py  cli.py  codex.py  config.py  host_functions.py  llm.py  runtime_factory.py  sandbox.py  tool.py
src/openrlm/ipybox/: __init__.py  build.py  container.py  executor.py  kernel.py
src/openrlm/ipybox/docker/: Dockerfile  pyproject.toml
tests/: test_e2e.py
