[project]
name = "arcgeneral"
version = "0.1.0"
description = "RLM based agent harness and CLI with persistent iPython repl tool"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "aiodocker>=0.23.0",
    "openrouter>=0.6.0",
    "python-dotenv>=1.2.1",
    "aiohttp>=3.9.0",
    "httpx[http2]>=0.28.1",
    ]

[project.optional-dependencies]
contrib = [
    "parallel-web>=0.3.4",
]
[project.scripts]
arcgeneral = "arcgeneral.cli:main"
where = ["src/"]
include = ["arcgeneral*"]